--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,15 @@ apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 
 android {
-    namespace 'kg.foodbambook.bambook'
+    namespace 'kg.foodbambook.kg'
     compileSdkVersion 33
     defaultConfig {
-        applicationId "kg.foodbambook.bambook"
-        minSdkVersion 21
+        applicationId "kg.foodbambook.kg"
+        minSdkVersion 15
         targetSdkVersion 33
-        versionCode 13
-        versionName "2.2"
+        versionCode 16
+        versionName "3.2"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -74,6 +75,8 @@ dependencies {
 
     //Input Mask
     implementation 'com.github.santalu:mask-edittext:1.1.1'
+
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
 
